# beautycat

./: .gitignore  README.md  install.sh  pyproject.toml
.github/workflows/: ci.yml
beautycat/: __main__.py  adb.py  buffer.py  cli.py  filters.py  parser.py  presets.py  resolver.py  server.py  session.py
beautycat/web/: app.js  index.html  styles.css
tests/: test_adb_ps.py  test_buffer.py  test_filters.py  test_parser.py  test_presets.py
