[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "beautycat"
version = "0.1.0"
description = "A beautiful web-based wrapper for adb logcat, inspired by Android Studio's Logcat."
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }
authors = [{ name = "Jeziel Lago" }]
keywords = ["adb", "logcat", "android", "logs", "debug"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Software Development :: Debuggers",
]
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.27",
    "websockets>=12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
beautycat = "beautycat.cli:main"

[tool.setuptools.packages.find]
include = ["beautycat*"]

[tool.setuptools.package-data]
beautycat = ["web/*.html", "web/*.js", "web/*.css"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
